--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,9 @@
     ]
   },
   "projects": {
+    "inventory-domain": {
+      "tags": ["domain:inventory", "type:domain-logic"]
+    },
     "shared": {
       "tags": ["scope:utils"]
     },
